# fizzbuzz

./: .gitignore
python/: pyproject.toml
python/src/fizzbuzz/: fizzbuzz.py
src/fizzbuzz/: main.py
tests/: test_fizzbuzz.py  test_main.py
